welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: illegal start of simple pattern
        case Direction WEST => right();forward();right();
                            ^SnakeBuggle:14: error: '=>' expected but ';' found.
        case Direction WEST => right();forward();right();
                                      ^